force-app/main/default/objects/Apttus_Config2__ProductDefaultValue__c/Apttus_Config2__ProductDefaultValue__c.object-meta.xml
<CustomObject>
    <description>Represents the default values for a product</description>
    <label>Product Default Value</label>
    <nameField>
        <displayFormat>DV-{0000000000}</displayFormat>
        <label>Default Value Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Default Values</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>