force-app/main/default/objects/Apttus_Config2__ProductDefaultValue__c/fields/Apttus_Config2__IncludeProductGroupId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__IncludeProductGroupId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>D of the product group to include for the selected product or option</description>
    <label>Include Product Group</label>
    <referenceTo>Apttus_Config2__ProductGroup__c</referenceTo>
    <relationshipLabel>Product Default Values (Include Product Group)</relationshipLabel>
    <relationshipName>IncludeProductDefaultValues</relationshipName>
    <type>Lookup</type>
</CustomField>