force-app/main/default/objects/Apttus_Config2__ProductDefaultValue__c/fields/Apttus_Config2__IncludeProductId__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__IncludeProductId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ID of the product or option to include for the selected product</description>
    <label>IncludeProduct</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Product Default Values (Include Product)</relationshipLabel>
    <relationshipName>IncludeProductDefaultValues</relationshipName>
    <type>Lookup</type>
</CustomField>