force-app/main/default/objects/Apttus_Config2__ProductDefaultValue__c/fields/Apttus_Config2__SellingTerm__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__SellingTerm__c</fullName>
    <description>The default selling term associated with the product or service</description>
    <label>Selling Term</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>