force-app/main/default/objects/Apttus_Config2__ProductDefaultValue__c/fields/Apttus_Config2__ValueType__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__ValueType__c</fullName>
    <description>The value type. The Default value type is used to store defaults for the product/service. The Auto Include value type is used to indicate the product/service to be auto included.</description>
    <label>Value Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Default</fullName>
                <default>true</default>
                <label>Default</label>
            </value>
            <value>
                <fullName>Auto Include</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>